<resources>
    <string name="app_name">QC Worker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_lang_fr">French</string>
    <string name="action_lang_pt">Portuguese</string>
    <string name="action_lang_en">English</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contacts</string>
    <string name="menu_empresa">Entreprise</string>
    <string name="menu_desempenho">Performance</string>
    <string name="menu_ausencia">Absense / Holidays Request</string>
    <string name="menu_ficha">Personal Data</string>
    <string name="menu_pessoal">Personal</string>
    <string name="menu_alimentacao">Alimentation</string>
    <string name="menu_alojamento">Lodging</string>
    <string name="menu_aloj_alim">Lodging &amp; Alimentation</string>
    <string name="menu_limosa">Limosas</string>
    <string name="menu_obra">Construction Site</string>
    <string name="menu_home">Home</string>
    <string name="menu_sugestao">Suggestion / Complaint</string>
    <string name="menu_share">Share</string>
    <string name="menu_visit_us">Visit us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_of_use">Terms of Use</string>

    <string name="toast_lang_select">Language already selected!</string>

    <string name="prompt_worker_code">Worker ID</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid ID</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_activity_input_id" >Type in your worker ID</string>
    <string name="login_activity_nfc" >Pass Company Card</string>
    <string name="loading">Loading...</string>

    <string name="update_required">You need to update the App</string>
    <string name="update_check">Checkin App version ...</string>
    <string name="update_ok">You have the latest version </string>

    <string name="error_title">Error</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_write_file">Error writing file</string>
    <string name="error_no_data">No data received</string>
    <string name="error_ivalid_data">Invalid data received</string>
    <string name="error_ivalid_url">Invalid url</string>
    <string name="error_nfc_disabled">NFC is disabled</string>
    <string name="error_nfc_not_supported">NFC is not supported</string>
    <string name="error_nfc_ask">Enable NFC in settings?</string>
    <string name="error_location_disabled">you need to enable location</string>
    <string name="error_update_msg">There\'s a new version of the App. Click continue to install.</string>
    <string name="error_update_available">Update available</string>

    <string name="alertbox_continue">Continue</string>
    <string name="alertbox_cancel">Cancel</string>
    <string name="alertbox_title_question">Question</string>

    <string name="button_send_request">Send request</string>
    <string name="button_send">Send</string>

    <string name="commServer_error">Error contacting server!</string>
    <string name="commServer_check_internet">Check your internet connection and try again</string>
    <string name="commServer_connect_title_msg">Loading...</string>
    <string name="commServer_connect_msg">Contacting server</string>
    <string name="commServer_download_ok">Downloaded sucessfully</string>
    <string name="commServer_submit_error">Error on submitting request</string>
    <string name="commServer_submit_ok">Request submitted successfully</string>

    <string name="share_title">Quality Construction</string>
    <string name="share_message">Hey Friend, checkout this awesome construction site: http://www.qualityconstruction.be</string>
    <string name="share_via">Share via</string>

    <string name="fragment_about_registered_to">This App version is registered to Quality Construction</string>
    <string name="fragment_about_developer">Developed and maintained by Miguel Silva &#169; 2019</string>
    <string name="fragment_about_contact">mtpsilva@icloud.com</string>
    <string name="fragment_about_download">You can download the latest version at \n http://www.qualityconstruction.be/app</string>
    <string name="fragment_about_version">Version</string>
    <string name="fragment_about_title">About</string>
    <string name="fragment_about_email_choose">Choose email client</string>
    <string name="fragment_about_email_subject">Contact email from Construction App</string>
    <string name="fragment_about_email_message">Hello, \n I want to contact you because ... \n Best regards, Your name </string>
    <string name="fragment_about_testers">Application testers and debuggers</string>

    <string name="fragment_contacts_title">QC Contacts</string>
    <string name="fragment_contacts_eg_title">General manager</string>
    <string name="fragment_contacts_eg_mobile">Mobile number: +32 0 479 13 55 76</string>
    <string name="fragment_contacts_eg_email">joseazevedo@qualityconstruction.be</string>
    <string name="fragment_contacts_eg_name">José Azevedo</string>

    <string name="fragment_contacts_ec_title">Engineering</string>
    <string name="fragment_contacts_ec_mobile">Mobile number: +32 0 474 28 69 01</string>
    <string name="fragment_contacts_ec_email">miguelsilva@qualityconstruction.be</string>
    <string name="fragment_contacts_ec_name">Miguel Silva</string>

    <string name="fragment_contacts_sf_title">Safety &amp; Formation</string>
    <string name="fragment_contacts_sf_mobile">Mobile number: +32 0 475 31 89 98</string>
    <string name="fragment_contacts_sf_email">marcelobessa@qualityconstruction.be</string>
    <string name="fragment_contacts_sf_name">Marcelo Bessa</string>

    <string name="fragment_contacts_ag_title">General Administrator</string>
    <string name="fragment_contacts_ag_mobile">Mobile number: +32 0 479 13 55 26</string>
    <string name="fragment_contacts_ag_email">anaguedes@qualityconstruction.be</string>
    <string name="fragment_contacts_ag_name">Ana Guedes</string>

    <string name="fragment_limosas_title">Site limosa</string>
    <string name="fragment_limosas_short_description">View Limosa QR Code of the construction site</string>
    <string name="fragment_limosas_nosite">you\'re not at a construction site</string>
    <string name="fragment_limosas_nolimosa">you don\'t have a limosa for this construction site</string>

    <string name="fragment_lodging_title">Lodging</string>
    <string name="fragment_lodging_short_description">Check or request change of lodging</string>
    <string name="fragment_lodging_actual">You\'re currently lodged in</string>
    <string name="fragment_lodging_request_change">make a request to change place to</string>
    <string name="fragment_lodging_reason">Tell us why you want to change</string>
    <string name="fragment_lodging_no_places">no places available</string>
    <string name="fragment_lodging_no_assign">no place reserved</string>
    <string name="fragment_lodging_invalid_selection">You need to select a different place</string>
    <string name="fragment_lodging_invalid_reason">You need to state a motif</string>

    <string name="fragment_suggestion_title">Suggestion / complaint</string>
    <string name="fragment_suggestion_submit_title">make a complaint or a suggestion</string>
    <string name="fragment_suggestion_box">Tell us what\'s on your mind</string>
    <string name="fragment_suggestion_invalid_reason">You need to state a motif</string>

    <string name="fragment_performance_title">Performance</string>
    <string name="fragment_performance_short_text">This month work performance</string>
    <string name="fragment_performance_explanation_text">Value is determined based on your days worked and the total days you\'ve absensed during this month</string>

    <string name="fragment_absense_title">Absense / Holidays</string>
    <string name="fragment_absense_short_description">Schedule days of absense or holidays</string>
    <string name="fragment_absense_schedule_request">schedule days of Absense or Holidays</string>
    <string name="fragment_absense_reason">what is the motif</string>
    <string name="fragment_absense_select_date">select a date</string>
    <string name="fragment_absense_start_date">Start date</string>
    <string name="fragment_absense_end_date">End date</string>
    <string name="fragment_absense_invalid_reason">You need to state a motif</string>
    <string name="fragment_absense_invalid_start_date">Start date has to be no earlier than tomorrow</string>
    <string name="fragment_absense_invalid_end_date">End date needs to be later than start date</string>

    <string name="fragment_workerfile_title">Personal data</string>
    <string name="fragment_workerfile_worker_number">Worker num.:</string>
    <string name="fragment_workerfile_short_description">Check or change personal data</string>
    <string name="fragment_workerfile_header">Company worker file personal data</string>
    <string name="fragment_workerfile_name">Name</string>
    <string name="fragment_workerfile_email">Email</string>
    <string name="fragment_workerfile_mobile">Mobile number</string>
    <string name="fragment_workerfile_mobile_112">Emergency contact</string>
    <string name="fragment_workerfile_nib">Bank account NIB</string>
    <string name="fragment_workerfile_edit_data">I want to change file details</string>
    <string name="fragment_workerfile_nothing_changes">Nothing to change on your personal file</string>
    <string name="fragment_workerfile_ivalid_user">Error loading worker data</string>
    <string name="fragment_workerfile_address">Address</string>

    <string name="fragment_food_title">Meal selection</string>
    <string name="fragment_food_short_description">Select your dinner meal for today</string>
    <string name="fragment_food_header">Today\'s meal selection for dinner</string>
    <string name="fragment_food_selection">Choose your meal</string>
    <string name="fragment_food_place">You\'re assigned to eat at </string>
    <string name="fragment_food_info">You can make a meal reservation until 12H and cancel until 18H</string>
    <string name="fragment_food_no_assign">You haven\'t a restaurant assigned. Contact the office to find out more. Thank you.</string>
    <string name="fragment_food_no_eat">I\'m not having dinner tonight</string>
    <string name="fragment_food_alertbox_no_meal">Are you sure you won\'t be having dinner tonight?</string>

    <string name="fragment_home_title">Welcome</string>
    <string name="fragment_privacy_title">Privacy</string>
    <string name="fragment_terms_title">Terms of use</string>

    <string name="t">t</string>
</resources>
